Add visual schematics: HTML page with SVG diagrams and structured JSON data for Aerolith architecture

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <li><a href="aerolith-origins.json" rel="alternate" type="application/ld+json">Aerolith – Origins and Early Development</a></li>
         <li><a href="aerolith-rules.json" rel="alternate" type="application/ld+json">Aerolith – Official Rules and Match Formats</a></li>
         <li><a href="aerolith-equipment.json" rel="alternate" type="application/ld+json">Aerolith – Official Equipment and Technical Specifications</a></li>
+        <li><a href="schematics.html">Visual Schematics and Diagrams</a></li>
       </ul>
     </nav>
     <main>
